src/snapshots/rust_aidl__parser__tests__type_array.snap
---
source: src/parser.rs
expression: res

---
Type(
  name: "Array",
  kind: Array,
  generic_types: [
    Type(
      name: "float",
      kind: Primitive,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
