src/snapshots/rust_aidl__parser__tests__type_custom.snap
---
source: src/parser.rs
expression: res

---
Type(
  name: "TypeName",
  kind: Custom,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
