src/snapshots/rust_aidl__parser__tests__type_custom_with_namespace.snap
---
source: src/parser.rs
expression: res

---
Type(
  name: "com.example.TypeName",
  kind: Custom,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
