src/snapshots/rust_aidl__parser__tests__type_list-2.snap
---
source: src/parser.rs
expression: res

---
Type(
  name: "List",
  kind: Invalid,
  generic_types: [
    Type(
      name: "int",
      kind: Primitive,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
