src/snapshots/rust_aidl__parser__tests__type_list.snap
---
source: src/parser.rs
expression: res

---
Type(
  name: "List",
  kind: List,
  generic_types: [
    Type(
      name: "MyObject",
      kind: Custom,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
