src/snapshots/rust_aidl__parser__tests__type_map_primitive1.snap
---
source: src/parser.rs
expression: res

---
Type(
  name: "Map",
  kind: Invalid,
  generic_types: [
    Type(
      name: "int",
      kind: Primitive,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
    Type(
      name: "String",
      kind: String,
      generic_types: [],
      definition: None,
      symbol_range: "...",
    ),
  ],
  definition: None,
  symbol_range: "...",
)
