src/snapshots/rust_aidl__parser__tests__type_primitive1.snap
---
source: src/parser.rs
expression: res

---
Type(
  name: "double",
  kind: Primitive,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
