src/snapshots/rust_aidl__parser__tests__type_primitive2.snap
---
source: src/parser.rs
expression: res

---
Type(
  name: "doublegum",
  kind: Custom,
  generic_types: [],
  definition: None,
  symbol_range: "...",
)
